2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php,
	include/functions_networkmap.php: improved the source code style.
	
	* include/graphs/fgraph.php, include/graphs/functions_pchart.php:
	merged changes from the trunk.

2013-06-20  Sancho lerena <slerena@artica.es>

	* include/graphs/functions_pchart.php,
	include/graphs/fgraph.php: Fixed some usability problems with static graphs.

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/pChart/pPie.class.php,
	include/graphs/fgraph.php: fixed the pie charts borders (again) and
	fixed the html entities in the pie charts legends.
	
	* operation/agentes/estado_generalagente.php: improved the source
	code style.

2013-06-20  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alerts_config.php: Added a new help.

2013-06-19 Mario Pulido <mario.pulido@artica.es>

	* include/help/ja/help_module_definition.php
        include/help/en/help_module_definition.php,
        include/help/es/help_module_definition.php: Changes in help

2013-06-18 Mario Pulido <mario.pulido@artica.es>

	*images/help/alert01.png,
	images/help/alert02.png,
	images/help/alert03.png,
	images/help/alert04.png,
	images/help/alert05.png,
	images/help/alert06.png,
	images/help/alert07.png,
	images/help/alert08.png,
	images/help/alert09.png,
	images/help/event01.png,
	images/help/event02.png,
	images/help/event03.png,
	images/help/event04.png,
	images/help/alert10.png,
	images/help/alert11.png,
	images/help/alert12.png,
	images/help/alert13.png,
	images/help/alert14.png,
	images/help/alert15.png,
	images/help/alert16.png,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php,
	godmode/alerts/configure_alert_command.php,
	godmode/alerts/alert_actions.php,
	godmode/alerts/alert_commands.php,
	godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	include/help/en/help_event_alert.php,